SONAR-11230 fix coverage indicator overflow

--- a/server/sonar-web/src/main/js/app/styles/init/base.css
+++ b/server/sonar-web/src/main/js/app/styles/init/base.css
@@ -106,6 +106,7 @@ tt {
 svg,
 img {
   vertical-align: top;
+  overflow: visible;
 }
 
 hr {
